chore(下载): 降低 JVM 运行服务通知级别 - 将 JVM 运行服务通知等级降低到 Low - 同时，为 Forge 类安装器安装过程的通知添加进度/描述